<resources>
    <string name="app_name">Project</string>
    <string name="text_main">찰떡궁합</string>
    <string name="text_main_2">당신의 짝을 찾아드립니다!</string>
    <string name="text_main_3">상대와 보고 싶은 궁합을 선택해주세요!</string>
    <string name="text_main_4">5가지의 궁합 중 하나를 선택해주세요.</string>
    <string name="main2_btn1">mbti 궁합</string>
    <string name="main2_btn2">혈액형 궁합</string>
    <string name="main2_btn3">별자리 궁합</string>
    <string name="main2_btn4">이름 궁합</string>
    <string name="main2_btn5">띠 궁합</string>
    <string name="text_main5">mbti 궁합</string>
    <string name="text_main6">당신의 mbti를 선택해주세요.</string>
    <string name="text_main7">상대의 mbti를 선택해주세요.</string>
    <string name="result">결과 보기!</string>
    <string name="text_main8">당신의 혈액형을 클릭해주세요.</string>
    <string name="text_main9">상대의 혈액형을 클릭해주세요.</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="o">O</string>
    <string name="ab">AB</string>
    <string name="text_main10">당신의 별자리를 선택해주세요.</string>
    <string name="text_main11">상대의 별자리를 선택해주세요.</string>
    <string name="result_0__30">0~30%</string>
    <string name="result_0_30">당신과 상대방은 맞지않는 궁합이군요.찰떡궁합인 다른 사람을 찾아보아요!</string>
    <string name="result_40__60">40~60%</string>
    <string name="result_40_60">당신과 상대방은 나쁘지 않은 궁합이군요! 찰떡궁합이 될 수 있게 각자 상대방을 배려하는게 어떨가요?</string>
    <string name="result_70__100">70~100%</string>
    <string name="result_70_100">당신과 상대방은 찰떡궁합이군요! 두분은 천생연분이네요!</string>

</resources>