<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/main2_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/p1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_3"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:textColor="#000000"
        android:fontFamily="@font/j"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_4"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:fontFamily="@font/j"
        android:gravity="center"/>

    <Button
        android:id="@+id/main2_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main2_btn1"
        android:textSize="25dp"
        android:fontFamily="@font/j"/>

</LinearLayout>