<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".result3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="50dp"
        android:textColor="#000000"
        android:fontFamily="@font/j"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/p1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_70__100"
        android:layout_marginTop="100dp"
        android:textSize="50dp"
        android:background="#FFE5E5"
        android:textColor="#000000"
        android:fontFamily="@font/j"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_70_100"
        android:layout_marginTop="100dp"
        android:textSize="38dp"
        android:textColor="#000000"
        android:fontFamily="@font/j"
        android:gravity="center"/>

</LinearLayout>